--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="header"><img class="banner-logo-format" src="images/logo/ohmyfood.png"></header>
+    <header class="header"><img class="banner-logo-format" src="images/logo/ohmyfood.png" alt="."></header>
 
     <div class="block-screen-contianer">
         <div class="block-screen">
@@ -63,7 +63,7 @@
                 <figure class="restaurants-listings-margin">
                     <div class="restaurant-image-new-wrapper">
                         <img class="restaurants-listings-crop"
-                            src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+                            src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=".">
                         <div class="restaurants-new-box">New</div>
                     </div>
                     <figcaption>
@@ -80,7 +80,7 @@
                 <figure class="restaurants-listings-margin">
                     <div class="restaurant-image-new-wrapper">
                         <img class="restaurants-listings-crop-center"
-                            src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
+                            src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt=".">
                         <div class="restaurants-new-box">New</div>
                     </div>
                     <figcaption>
@@ -95,7 +95,7 @@
             <a href="menu_bastille.html">
                 <figure class="restaurants-listings-margin">
                     <img class="restaurants-listings-crop"
-                        src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+                        src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt=".">
                     <figcaption>
                         <div class="restaurants-listings-title">Bastille<i
                                 class="fas fa-heart restaurants-listings-heart"></i></div>
@@ -108,7 +108,7 @@
             <a href="menu_gourmand.html">
                 <figure class="restaurants-listings-margin">
                     <img class="restaurants-listings-crop"
-                        src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+                        src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt=".">
                     <figcaption>
                         <div class="restaurants-listings-title">Le Gourmand<i
                                 class="fas fa-heart restaurants-listings-heart"></i></div>
@@ -121,7 +121,7 @@
 
 
     <footer class="footer-style">
-        <img class="footer-logo" src="images/logo/ohmyfood@2x.svg">
+        <img class="footer-logo" src="images/logo/ohmyfood@2x.svg" alt=".">
 
         <p><i class="fas fa-utensils footer-icon-fork"></i>Suggest a restaurant</p>
         <p><i class="fas fa-hands-helping footer-icon"></i>Become a partner</p>
